# flutter_rust_project_cleaner

./: ._target  CLAUDE.md  Cargo.toml  FEATURES.md  README.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/cleaner/: mod.rs
src/config/: mod.rs
src/project/: detector.rs  metadata.rs  mod.rs
src/scanner/: mod.rs
src/utils/: interactive.rs  logging.rs  mod.rs
tests/: integration_test.rs
